Totally misunderstood the example I found. Maybe this will fix it. Flexbox row, instead of align center.

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,7 @@ body > footer {
 
 .myheader {
     display: flex;
-    align-items:center;
+    flex-direction: row;
     justify-content: space-between;
 }
 
